--- a/iffy/CMakeLists.txt
+++ b/iffy/CMakeLists.txt
@@ -4,5 +4,6 @@ add_library(${tgt} SHARED
     addon.c
     addon-node.c
     )
+target_link_libraries(${tgt} Python3::Python Python3::NumPy)
 target_include_directories(${tgt} PUBLIC ${CMAKE_JS_INC})
 set_target_properties(${tgt} PROPERTIES PREFIX "" SUFFIX ".node")
